beginning shift to firebase auth
